# syncro

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  justfile  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  publish.yml
scripts/: release.py  update_rc.py  utils.py
syncro/: __init__.py
syncro/containers/: __init__.py  ordered_set.py
syncro/core/: dirdiff.py  mirrorer.py  trivial_backup.py
syncro/gui/: main.ui  resources.qrc
syncro/templates/: resources.qrc
tests/containers/: test_ordered_set.py
tests/unit/core/: test_dirdiff.py
