[project]
name = "syncro"
version = "0.0.1"
description = "Small syncronization mechanism written in Python"
readme = "README.md"
requires-python = ">=3.14"
keywords = ["cookiecutter", "template", "qt"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development",
]

dependencies = [
    "coverage>=7.13.5",
    "pre-commit>=4.6.0",
    "pyinstaller>=6.20.0",
    "pyqt6>=6.11.0",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
    "ty>=0.0.34",
    "zensical>=0.0.41",
]

[dependency-groups]
dev = [
    { include-group = "lint" },
    { include-group = "test" },
    { include-group = "tools" },
]
lint = [
    "ruff",
]
test = [
    "coverage",
    "pytest",
    "ty",
    "ipdb",
]
tools = [
    "rust-just>=1.42.4",
]
docs = [
    "zensical",
]
pyinstaller = [
    "pyinstaller",
]


[tool.ruff]
exclude = [
    "*cookiecutter.package_name*"
    ]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line length (handled by ruff format for code)
    "B008",  # function call in defaults (standard typer pattern)
]

[tool.ty.src]
exclude = [
    "*syncro*",
]

[tool.coverage.run]
branch = true
parallel = true
source = ["tests/"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.pytest.ini_options]
testpaths = [
    "tests",
]


[tool.hatch.build.targets.sdist]
include = [
    "cookiecutter.json",
    "justfile",
    "pyproject.toml",
    "README.md",
    "hooks/",
    "syncro/",
]
